--- a/Source/ScreenCropper/ScreenCropper.csproj
+++ b/Source/ScreenCropper/ScreenCropper.csproj
@@ -159,6 +159,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Loading.gif">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="ScreenCropper.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
