--- a/Source/ScreenCropper/packages.config
+++ b/Source/ScreenCropper/packages.config
@@ -4,6 +4,7 @@
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net48" />
   <package id="NuGet.CommandLine" version="5.3.1" targetFramework="net48" developmentDependency="true" />
   <package id="SharpCompress" version="0.17.1" targetFramework="net48" />
-  <package id="Splat" version="1.6.2" targetFramework="net48" />
+  <package id="Splat" version="9.4.5" targetFramework="net48" />
   <package id="squirrel.windows" version="1.9.1" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
