--- a/Source/ScreenCropper.WPF/packages.config
+++ b/Source/ScreenCropper.WPF/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net48" />
   <package id="NHotkey" version="2.0.1" targetFramework="net48" />
   <package id="NHotkey.Wpf" version="2.0.1" targetFramework="net48" />
 </packages>
