rename + move: MainWindow -> ScreenshotOverlay moved to separate folder in project

--- a/Source/ScreenCropper.WPF/ScreenCropper.WPF.csproj
+++ b/Source/ScreenCropper.WPF/ScreenCropper.WPF.csproj
@@ -66,7 +66,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Windows\ScreenshotOverlay.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -74,8 +74,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="Windows\ScreenshotOverlay.xaml.cs">
+      <DependentUpon>ScreenshotOverlay.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
