move: tray icon is now not tied to screenshot overlay

--- a/Source/ScreenCropper.WPF/ScreenCropper.WPF.csproj
+++ b/Source/ScreenCropper.WPF/ScreenCropper.WPF.csproj
@@ -107,9 +107,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\ScreenCropper.ico">
+    <Content Include="Images\ScreenCropper.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
