add: settings window

--- a/Source/ScreenCropper.WPF/ScreenCropper.WPF.csproj
+++ b/Source/ScreenCropper.WPF/ScreenCropper.WPF.csproj
@@ -66,6 +66,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Windows\SCSettings.xaml.cs">
+      <DependentUpon>SCSettings.xaml</DependentUpon>
+    </Compile>
     <Page Include="Windows\ScreenshotOverlay.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -78,6 +81,10 @@
       <DependentUpon>ScreenshotOverlay.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\SCSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
