fix: squirrel.exe tool reference in main .csproj

--- a/Source/ScreenCropper/ScreenCropper.csproj
+++ b/Source/ScreenCropper/ScreenCropper.csproj
@@ -184,7 +184,7 @@
     <NuGetCommandLine Include="..\packages\NuGet.CommandLine.*\tools\nuget.exe">
       <InProject>False</InProject>
     </NuGetCommandLine>
-    <Squirrel Include="..\packages\Squirrel.Windows.*\tools\squirrel.exe">
+    <Squirrel Include="..\packages\squirrel.windows.*\tools\squirrel.exe">
       <InProject>False</InProject>
     </Squirrel>
   </ItemGroup>
